app/scss/_skills.scss
.skills {
  scroll-margin-block-start: 3rem;
}

.skills-box {
  min-height: 51.4rem;
}

.skills-grid {
  display: grid;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
  grid-template-rows: repeat(auto-fill, minmax(10rem, 1fr));

  @include breakpoint-down(small) {
    grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
    grid-template-rows: repeat(auto-fill, minmax(8rem, 1fr));
  }
}

.skills-grid-cell {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  &.sub-grid {
    display: grid;
    place-items: center;
    padding-top: 0.75rem;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr;
  }

  @media (hover: hover) and (pointer: fine) {
    transition: transform 150ms ease-in-out;

    &:hover,
    &:focus {
      transform: scale(1.2);
    }
  }
}

.skills-text {
  font-size: $font-medlrg;
  font-weight: 300;
  text-align: center;
  color: var(--font-color);
}

.skills-icon {
  border-radius: 5px;
  height: 5rem;
  width: auto;

  &.semi-wide-skill {
    scale: 0.9;
  }

  &.wide-skill {
    scale: 0.7;
  }

  &.saturate {
    filter: saturate(2);
  }

  &.whiten {
    filter: saturate(2);
  }

  &.marked {
    &.invert {
      filter: invert(1);
    }

    &.invert-whiten {
      filter: invert(1) saturate(2) brightness(300%);
    }
  }

  &.aws {
    &.top {
      grid-column-start: 1;
      grid-row-start: 1;
      clip-path: inset(0 0 35px 0);

      @include breakpoint-down(xsmall) {
        clip-path: inset(0 0 30px 0);
      }
    }

    &.bottom {
      grid-column-start: 1;
      grid-row-start: 1;
      clip-path: inset(45px 0 10px 0);

      @include breakpoint-down(xsmall) {
        clip-path: inset(35px 0 10px 0);
      }
    }
  }

  &.under-construction {
    grid-column-start: 1;
    grid-row-start: 1;
    filter: grayscale(1);
  }

  &.construction {
    grid-column-start: 1;
    grid-row-start: 1;
    clip-path: circle(50% at 50% 50%);
  }

  @include breakpoint-down(xsmall) {
    height: 4rem;
  }
}

.button-signature-wrapper {
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-wrap: wrap;

  @include breakpoint-down(mdsmall) {
    flex-direction: column;
  }
}

.signature {
  font-family: "Tangerine", cursive;
  font-size: $font-xlg;
  color: var(--font-color);
  font-weight: 700;
  margin: 0;
  padding: 1rem 0;

  @include breakpoint-down(medium) {
    font-size: $font-lrgmed;
  }

  @include breakpoint-down(xsmall) {
    font-size: $font-lrgr;
  }
}

.skills-line {
  border: 1px solid var(--color-main);
  border-radius: 5px;
  margin-top: 3rem;
  margin-bottom: 1rem;
}

.hours-counter {
  display: inline-block;
  width: 56.438px;
  // color: var(--cyan);
  @include breakpoint-down(small) {
    width: 44.56px;
  }
}

